--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "deploy": "vite build && vk-miniapps-deploy"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.0.15",
     "@vkontakte/icons": "^3.13.0",
     "@vkontakte/vk-bridge": "^2.15.7",
     "@vkontakte/vk-miniapps-deploy": "^1.0.0",
     "@vkontakte/vk-tunnel": "^0.2.7",
     "@vkontakte/vkui": "^7.5.1",
+    "lucide-react": "^0.525.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
